--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pandas
-medspacy
-spacy
-pyinstaller
-openpyxl
-py-splash
+pandas>=2.0.3
+numpy>=1.24.4
+medspacy>=1.2.0
+spacy>=3.5.4
+pyinstaller==5.13.2
+openpyxl>=3.1.3
+py-splash>=0.4.5
+pillow>=10.4.0
+regex>=2024.5.15
